# ollamatop

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  lib.rs  main.rs
src/model/: mod.rs  stats.rs
src/ollama/: client.rs  mod.rs
src/ui/: mod.rs
src/ui/components/: mod.rs  ollama_stats.rs
tests/: integration_tests.rs
